Update of core-libraries Content Plugin: Check for YireoHelper before running

--- a/joomla25/.gitignore
+++ b/joomla25/.gitignore
@@ -1,5 +1,6 @@
 LICENSE.txt
 README.txt
+configuration.php
 administrator/cache/
 administrator/components/com_admin/
 administrator/components/com_banners/
